--- a/ingress-example/backend.yaml
+++ b/ingress-example/backend.yaml
@@ -7,5 +7,5 @@ metadata:
     kubernetes.io/ingress.class: mini-ingress-nginx
 spec:
   backend:
-    serviceName: testsvc
-    servicePort: 80
+    serviceName: nsq
+    servicePort: 4151
