fix ingress svc
Signed-off-by: qinpengfei <qinpengfei@jd.com>

--- a/deployments/nginx-ingress-svc.yaml
+++ b/deployments/nginx-ingress-svc.yaml
@@ -4,16 +4,11 @@ metadata:
   name: nginx-ingress
   namespace: mini-nginx-ingress
 spec:
-  externalTrafficPolicy: Local
-  type: LoadBalancer
+  type: NodePort 
   ports:
   - port: 80
     targetPort: 80
     protocol: TCP
     name: http
-  - port: 443
-    targetPort: 443
-    protocol: TCP
-    name: https
   selector:
     app: nginx-ingress
